# 2DGameEngine-Workspace

./: .gitignore  CMakeLists.txt  README.md
2DEngine/: CMakeLists.txt
2DEngine/Assets/shaders/: basic.frag  basic.vert
2DEngine/include/Audio/: AudioManager.h
2DEngine/include/Core/: Engine.h  Game.h  Time.h  Window.h
2DEngine/include/Entities/: Bullet.h  Enemy.h  Entity.h  Obstacle.h  Player.h
2DEngine/include/Graphics/: Camera.h  Renderer.h  Shader.h  TextRenderer.h  Texture.h
2DEngine/include/Input/: Input.h  Keys.h
2DEngine/include/Physics/: Collider.h  Physics.h
2DEngine/include/UI/: Button.h  Menu.h  UIElement.h
2DEngine/src/Audio/: AudioManager.cpp
2DEngine/src/Core/: Engine.cpp  Time.cpp  Window.cpp
2DEngine/src/Entities/: Bullet.cpp  Enemy.cpp  Entity.cpp  Obstacle.cpp  Player.cpp
2DEngine/src/Graphics/: Camera.cpp  Font.cpp  Renderer.cpp  Shader.cpp  TextRenderer.cpp  Texture.cpp
2DEngine/src/Input/: Input.cpp
2DEngine/src/Physics/: Collider.cpp  Physics.cpp
2DEngine/src/UI/: Button.cpp  Menu.cpp  UIElement.cpp
Games/GatorInvaders/: CMakeLists.txt  installer.iss
Games/GatorInvaders/assets/shaders/: basic.frag  basic.vert
Games/GatorInvaders/include/: GatorInvaders.h  SpaceInvadersGame.h
Games/GatorInvaders/src/: GatorInvaders.cpp  SpaceInvadersGame.cpp  main.cpp
